Started leaderboard GUI development